tests/ui/lub-glb/old-lub-glb-hr-noteq2.leak.stderr
error[E0308]: `match` arms have incompatible types
  --> $DIR/old-lub-glb-hr-noteq2.rs:25:14
   |
LL |       let z = match 22 {
   |  _____________-
LL | |         0 => y,
   | |              - this is found to be of type `for<'a> fn(&'a u8, &'a u8) -> &'a u8`
LL | |         _ => x,
   | |              ^ one type is more general than the other
LL | |
LL | |     };
   | |_____- `match` arms have incompatible types
   |
   = note: expected fn pointer `for<'a> fn(&'a _, &'a _) -> &'a _`
              found fn pointer `for<'a, 'b> fn(&'a _, &'b _) -> &'a _`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
